--- a/redux/package.json
+++ b/redux/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "redux",
+  "name": "reduxapp",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -13,6 +13,7 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "web-vitals": "^1.1.2"
   },
